--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -1,23 +1,28 @@
-# ·şÎñ¶Ë¿Ú
+# ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 server.port=8071
 # jdbc
 spring.datasource.password=root
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/myitem?characterEncoding=UTF-8
-# mybtaisÅäÖÃ
+
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-# ÈÕÖ¾¼¶±ğ
+
 #logging.level.root=debug
-# dubboµÄÅäÖÃ
-# dubboÖĞµÄ·şÎñÃû³Æ
+
 spring.dubbo.application=manage-service
-# dubboµÄÍ¨Ñ¶Ğ­ÒéÃû³Æ
-spring.dubbo.protocol.name=dubbo
-# zookeeper×¢²áÖĞĞÄµÄµØÖ·
+
+
 spring.dubbo.registry.address=192.168.157.158:2181
-# zookeeperµÄÍ¨Ñ¶Ğ­ÒéµÄÃû³Æ
+
 spring.dubbo.registry.protocol=zookeeper
-# dubboµÄ·şÎñµÄÉ¨ÃèÂ·¾¶
+# dubboçš„æœåŠ¡çš„æ‰«æè·¯å¾„
 spring.dubbo.base-package=com.yuan.gmall
+
+
+spring.redis.host=192.168.157.158
+
+spring.redis.port=6379
+
+spring.redis.database=0
 
