结算页面完成

--- a/gmall-cart-web/src/main/resources/application.properties
+++ b/gmall-cart-web/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.dubbo.consumer.check=false
 #松校验
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
-
+spring.thymeleaf.content-type: text/html
