--- a/gmall-order-service/pom.xml
+++ b/gmall-order-service/pom.xml
@@ -26,6 +26,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.yuan.gmall</groupId>
+            <artifactId>gmall-order-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
